@@ -193,7 +193,7 @@ public class GroupListProducer
 		tml = handler.messages;
         if (tml.size() > 0) {
 			for (int i = 0; i < tml.size(); i ++ ) {
-				UIBranchContainer errorRow = UIBranchContainer.make(tofill,"error-row:", new Integer(i).toString());
+				UIBranchContainer errorRow = UIBranchContainer.make(tofill,"error-row:", Integer.valueOf(i).toString());
 				/*if (tml.messageAt(i).args != null ) {	    		
 					UIMessage.make(errorRow,"error",tml.messageAt(i).acquireMessageCode(),(String[])tml.messageAt(i).args[0]);
 				} else {
